<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">




    <group android:checkableBehavior="single">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/my_profile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_profile"/>
    <item
        android:id="@+id/favourite_restaurants"
        android:title="@string/favourite_restaurants"
        android:icon="@drawable/ic_favourites_foreground"/>
    <item
        android:id="@+id/faqs"
        android:title="@string/faqs"
        android:icon="@drawable/ic_faqs"/>
    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_settings"/>
    </group>

</menu>