<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ForgotPasswordFragment"
    android:id="@+id/forgetPasswordFragment"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/txt_des3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter_your_mobile_and_email_below"
        android:textAllCaps="true"
        android:textColor="#B6B9C0"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_des3"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="#1F1F22"
        android:hint="@string/mobile_number_10_digits"
        android:padding="16dp"
        android:textColor="#B6B9C0"
        android:textColorHint="#B6B9C0"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_mobile_number"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="#1F1F22"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="#B6B9C0"
        android:textColorHint="#B6B9C0"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#5A64EA"
        android:text="@string/next"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>