<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.WelcomeFragment"
    android:background="@color/backgroundColor"
    android:id="@+id/WelcomeFragment">


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_discord_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/github_logo" />

        <TextView
            android:id="@+id/txt_discord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/app__name"
            android:textColor="#FFFEFF"
            android:textSize="30sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_pepe_shine"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/linear_layout"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/pepeshine" />

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_below="@+id/linear_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="25dp"
        android:src="@drawable/pngegg2" />

    <ImageView
        android:id="@+id/img_intern_pepe"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_below="@+id/img_pepe_shine"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/intern_pepe" />

    <TextView
        android:id="@+id/txt_welcomeDiscord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_intern_pepe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/welcome"
        android:textColor="#FFFEFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_welcomeDiscord"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal"
        android:text="@string/description"
        android:textColor="#B6B9C0"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_resgister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_description"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="#5A64EA"
        android:text="@string/btn_resgister"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_resgister"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="#414349"
        android:text="@string/btb_log_in"
        android:textColor="@color/white" />

</RelativeLayout>