<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.FAQsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="#E91E63"
        android:text="@string/q_1_how_will_the_training_be_delivered" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:text="@string/answer1" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="#E91E63"
        android:text="@string/q2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:text="@string/answer2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="#E91E63"
        android:text="@string/q3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:text="@string/answer3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="#E91E63"
        android:text="@string/q4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:text="@string/answer4" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"/>


<!--    <com.google.android.material.card.MaterialCardView-->
<!--        android:background="@android:color/darker_gray"-->
<!--        android:id="@+id/uid"-->
<!--        android:layout_columnWeight="1"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="12dp"-->
<!--        android:layout_rowWeight="1"-->
<!--        android:layout_width="300dp"-->
<!--        app:cardCornerRadius="10dp"-->
<!--        app:cardElevation="3dp">-->

<!--        <com.google.android.material.card.MaterialCardView-->
<!--            android:foreground="?android:attr/selectableItemBackground"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_width="match_parent"-->
<!--            card_view:cardBackgroundColor="@color/white"-->
<!--            card_view:cardCornerRadius="10dp"-->
<!--            card_view:cardPreventCornerOverlap="true">-->

<!--            <RelativeLayout-->
<!--                android:foreground="?android:attr/selectableItemBackground"-->
<!--                android:gravity="center"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_width="match_parent"-->
<!--                android:padding="16dp">-->

<!--                <androidx.appcompat.widget.AppCompatTextView-->
<!--                    android:drawablePadding="10dp"-->
<!--                    android:fontFamily="@font/roboto_black"-->
<!--                    android:id="@+id/uidNo"-->
<!--                    android:layout_alignParentStart="true"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginEnd="30dp"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:textColor="#000000"-->
<!--                    android:textSize="22dp" />-->

<!--                <ImageView-->
<!--                    android:id="@+id/arrowUID"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_alignParentTop="true"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="10dp"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:src="@drawable/ic_ratings" />-->

<!--                <androidx.appcompat.widget.AppCompatTextView-->
<!--                    android:fontFamily="@font/roboto_black"-->
<!--                    android:id="@+id/whatIsUID"-->
<!--                    android:layout_alignParentStart="true"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="60dp"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:text="whatAID"-->
<!--                    android:textColor="@android:color/darker_gray"-->
<!--                    android:textSize="20dp"-->
<!--                    android:visibility="visible" />-->

<!--                <View-->
<!--                    android:background="@android:color/darker_gray"-->
<!--                    android:id="@+id/line"-->
<!--                    android:layout_below="@id/whatIsUID"-->
<!--                    android:layout_height="1dp"-->
<!--                    android:layout_marginTop="2dp"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:visibility="gone" />-->

<!--                <Button-->
<!--                    style="@style/Widget.AppCompat.Button.Colored"-->
<!--                    android:background="@drawable/peping"-->
<!--                    android:fontFamily="@font/roboto_black"-->
<!--                    android:id="@+id/copyUID"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_below="@id/line"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="5dp"-->
<!--                    android:layout_width="150dp"-->
<!--                    android:padding="4dp"-->
<!--                    android:text="Copy UID"-->
<!--                    android:textSize="18dp"-->
<!--                    android:visibility="gone" />-->

<!--            </RelativeLayout>-->
<!--        </com.google.android.material.card.MaterialCardView>-->
<!--    </com.google.android.material.card.MaterialCardView>-->
</LinearLayout>