<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="140dp"
android:layout_margin="6dp"
android:id="@+id/cardRestaurant"
android:background="#ffffff"
app:cardCornerRadius="4dp">

<LinearLayout
    android:id="@+id/llFavContent"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:background="@color/white"
    android:orientation="horizontal"
    android:weightSum="6">

    <androidx.cardview.widget.CardView
        android:layout_width="10dp"
        android:layout_height="110dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1.5"
        android:padding="5dp"
        app:cardCornerRadius="6dp">
        <ImageView
            android:id="@+id/imgFavResImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />
    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3.3">

        <TextView
            android:id="@+id/txtFavResTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/name_of_the_restaurant"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtFavResPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtFavResTitle"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:text="@string/rs_299_person"
            android:textColor="#357a38"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/favIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_ratings" />

        <TextView
            android:id="@+id/txtFavRating"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/_4_5"
            android:textColor="#ffca28"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>
</androidx.cardview.widget.CardView>




    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="220dp"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    android:layout_margin="4dp"-->
    <!--    android:background="#ffffff"-->
    <!--    app:cardCornerRadius="10dp"-->
    <!--    android:orientation="vertical">-->

    <!--    <LinearLayout-->
    <!--        android:id="@+id/llFavContent"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:orientation="vertical"-->
    <!--        android:weightSum="9.5">-->

    <!--        <ImageView-->
    <!--            android:id="@+id/imgFavResImage"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="0dp"-->
    <!--            android:layout_weight="5"-->
    <!--            android:background="#f5f5f5"-->
    <!--            android:scaleType="fitCenter"-->
    <!--            android:src="@drawable/vector_github_" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/txtFavResTitle"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="0dp"-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:layout_weight="1.5"-->
    <!--            android:padding="4dp"-->
    <!--            android:text="Hello World"-->
    <!--            android:textAlignment="center"-->
    <!--            android:textAllCaps="false"-->
    <!--            android:textColor="#000000"-->
    <!--            android:textSize="14sp"-->
    <!--            android:textStyle="bold" />-->

    <!--        <View-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="1dp"-->
    <!--            android:layout_marginLeft="4dp"-->
    <!--            android:layout_marginRight="4dp"-->
    <!--            android:background="#f5f5f5" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/txtFavResPrice"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="0dp"-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:layout_weight="1.5"-->
    <!--            android:padding="4dp"-->
    <!--            android:text="Rs. 499"-->
    <!--            android:textAlignment="center"-->
    <!--            android:textColor="#357a38"-->
    <!--            android:textSize="13sp"-->
    <!--            android:textStyle="bold" />-->

    <!--        <View-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="1dp"-->
    <!--            android:layout_marginLeft="4dp"-->
    <!--            android:layout_marginRight="4dp"-->
    <!--            android:background="#f5f5f5" />-->

    <!--        <LinearLayout-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="0dp"-->
    <!--            android:layout_weight="1.5"-->
    <!--            android:orientation="horizontal"-->
    <!--            android:layout_gravity="center_horizontal"-->
    <!--            >-->

    <!--            <ImageView-->
    <!--                android:id="@+id/favIcon"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_gravity="center_vertical"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:src="@drawable/ic_action_fav"/>-->

    <!--        <TextView-->
    <!--            android:id="@+id/txtFavRating"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:drawablePadding="4dp"-->
    <!--            android:layout_gravity="center_vertical"-->
    <!--            android:padding="4dp"-->
    <!--            android:text="4.5"-->
    <!--            android:textColor="#ffca28"-->
    <!--            android:textSize="13sp"-->
    <!--            android:textStyle="bold" />-->

    <!--        </LinearLayout>-->

    <!--    </LinearLayout>-->

    <!--</androidx.cardview.widget.CardView>-->
